fix not work on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@ body {
   background: silver;
 }
 
-#thecanvas {
+canvas {
   touch-action: none;
+  user-select: none;
   width: 100%;
 }
 
